Mon Oct 24 10:19:44 2016  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* complex.c (Init_Complex): undefine Complex#clamp, which does not
	  work like other Comparable methods, because Complex does not
	  have <=> method.  patched by Tim Peters <zomg.tim AT gmail.com>
	  in [ruby-core:77720].  [Bug #12866]

Sun Oct 23 11:41:41 2016  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* include/ruby/encoding.h: include "ruby/ruby.h" explicitly for
	  enum ruby_fl_type and VALUE.

Sat Oct 22 23:33:55 2016  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* parse.y (reg_compile_gen): always append error message to the
	  error buffer.

Sat Oct 22 22:33:32 2016  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* numeric.c (num_funcall1): check recursion by inverse pair, to
	  fix fake infinite recursion.  [ruby-core:77713] [Bug #12864]

Sat Oct 22 18:52:32 2016  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* hash.c (rb_hash_compact_bang): should return nil if no elements
	  is deleted.  [ruby-core:77709] [Bug #12863]

Sat Oct 22 10:28:28 2016  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* configure.in (DLDFLAGS): fallback to LDFLAGS.
	  [ruby-core:72444] [Bug #11863]

	* configure.in (LIBRUBY_DLDFLAGS): fallback to DLDFLAGS.

	* configure.in (RUBY_APPEND_OPTION, RUBY_PREPEND_OPTION): expand
	  the option to be appended/prepended when matching, as well as
	  RUBY_APPEND_OPTIONS and  RUBY_PREPEND_OPTIONS.

Sat Oct 22 09:52:57 2016  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* compile.c (setup_args): duplicate splatting array if more
	  arguments present to obey left-to-right execution order.
	  [ruby-core:77701] [Bug# 12860]

Fri Oct 21 16:44:44 2016  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* dir.c (do_opendir): retry after GC when the limit for open file
	  descriptors reached.

Fri Oct 21 16:06:25 2016  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* ruby.c (open_load_file): retry after GC when the limit for open
	  file descriptors reached.
